<resources>
    <string name="app_name">ProyectoNew</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_principal">PRINCIPAL</string>
    <string name="galeria">GALERIA</string>
    <string name="notificaciones">NOTIFICACIONES</string>
    <string name="Dodepabe">DODEPABE FRAGMENT</string>
    <string name="Dota">DOTA</string>
    <string name="titulo_nav">PROGRAMADOR NARKAZS</string>
    <string name="nav_subtitulo">ALUMNO DE IDAT SJM</string>
</resources>