<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/fragmentoInitio"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_principal" />
        <item
            android:id="@+id/galeriape"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/galeria" />
        <item
            android:id="@+id/slideshowpe"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/notificaciones" />
        <item
            android:id="@+id/dodepabe"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/Dodepabe" />
        <item
            android:id="@+id/fragment_dota"
            android:icon="@drawable/logo"
            android:title="@string/Dodepabe" />
    </group>
</menu>